--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Memory Game!</h1>
     <p id="bestScore">Best Score:</p>
-    <p id="numClicks">Score:</p>
+    <p id="numClicks">Score: 0</p>
     <div id="game">
     </div>
     <button id="resetBttn">Reset</button>
